<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/poke_create_acct"
    tools:context=".views.fragment.CreateAccountFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="176dp"
        android:text="@string/create_account_text"
        android:textColor="@color/white"
       android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="24dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/poke"
            android:orientation="vertical"
            android:backgroundTint="@color/bg_create_acct">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNameCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"

                tools:layout_editor_absoluteX="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameCreateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_create"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/greyButton" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"

                tools:layout_editor_absoluteX="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameCreateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastnameCreateEditText"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/greyButton" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmailCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"

                tools:layout_editor_absoluteX="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_txt"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/greyButton" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPasswCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="405dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:hint="@string/passw_txt"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_btn"
        android:backgroundTint="@color/btn_create_acct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.911" />


</androidx.constraintlayout.widget.ConstraintLayout>